fix: footer-sub-brands centering on mobile

--- a/app/css/styles2.css
+++ b/app/css/styles2.css
@@ -1084,10 +1084,10 @@ output.mini {
     width: 100%;
     text-align: center;
     padding: 0px 0 25px 0;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    max-width: 220px;
 }
 
 .sub-brands-footer span {
@@ -1098,21 +1098,6 @@ output.mini {
 
 footer .sub-brands-footer a+span:nth-of-type(2) {
     display: none;
-}
-
-footer .sub-brands-footer a:nth-of-type(1) {
-    text-align: right;
-    margin-right: 10px;
-}
-
-footer .sub-brands-footer a:nth-of-type(2) {
-    text-align: left;
-    margin-left: 10px;
-}
-
-footer .sub-brands-footer a:nth-of-type(3) {
-    grid-column: 1 / 4;
-    justify-self: center;
 }
 
 footer .sub-brands-footer a:first-child {
@@ -1143,6 +1128,12 @@ footer .tpg-logo-container {
 
 @media (min-width: 675px) {
 
+    .sub-brands-footer {
+        display: block;
+        padding: 15px 0 25px 0;
+        max-width: unset;
+    }
+
     footer .sub-brands-footer a:nth-of-type(1),
     footer .sub-brands-footer a:nth-of-type(3) {
         text-align: unset;
@@ -1153,11 +1144,6 @@ footer .tpg-logo-container {
         text-align: unset;
         margin-right: unset;
         margin-left: unset;
-    }
-
-    .sub-brands-footer {
-        display: block;
-        padding: 15px 0 25px 0;
     }
 
     footer .sub-brands-footer a+span:nth-of-type(2) {
